--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -91,3 +91,27 @@ h2{
 .boxMatch::after{
     transform: rotateY(180deg);
 }
+
+@media (min-width:389px) and (max-width:391px){
+    .container{
+       width: 28.9em;
+       height: 45em;
+    }
+
+    h2{
+        font-size: 2.5em;
+        text-align: center;
+        text-wrap: nowrap;
+    }
+
+    .game{
+        width: 28.9em;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .item{
+        width: 2em;
+        height: 2em;
+    }
+}
